# crunchyrollsubdownloader

./: .gitignore  README.md  crdl.py  requirements.txt  setup.cfg
.github/workflows/: pypi.yml
src/crunchyrollsubdownloader/: crdl.py
