[metadata]
name = crunchyrollsubdownloader
version = 1.0.1
author = Thibaut Nocchi
author_email = 1619359+ThibaultNocchi@users.noreply.github.com
description = This tool helps you download all of a season subtitles list, in your choosen language.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThibaultNocchi/crunchyrollsubdownloader
project_urls =
Bug Tracker = https://github.com/ThibaultNocchi/crunchyrollsubdownloader/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU General Public License v3 (GPLv3)
Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
    bs4
	requests
	youtube-dl
	lxml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    crunchyrollsubdownloader = crunchyrollsubdownloader.crdl:main
